SR-4201: DispatchSourceSignal not working on Linux

The observed bug is that signals sent to the main thread
after it called dispatch_main were not triggering the
event handler of a DispatchSourceSignal that had been
previously created and activated to handle that signal.

This patch addresses the problem by:

- export _dispatch_sigmask() as the way to block signals in a process
  using dispatch
- call it when dispatch_main() is called
- each time dispatch registers a signal handler, register a sigaction that
  will catch signals for threads with wrong masks and will fix the thread
  configuration then raise the signal again by directing a pthread_kill
  to the manager thread so that it is delivered to the signalfd as expected.

Patch by Pierre Habouzit <phabouzit@apple.com> from PR-231
with minor compilation fixes by Dave Grove.